# Dream

./: .gitignore  CMakeLists.txt  Dream.cpp  Dream.h  README.md
Samples/ComputeTexture/: CMakeLists.txt  main.cpp
Samples/HelloTriangle/: CMakeLists.txt  main.cpp
Samples/Instancing/: CMakeLists.txt  main.cpp
Samples/RotatingCube/: CMakeLists.txt  main.cpp
Samples/TexturedQuad/: CMakeLists.txt  main.cpp
Scripts/CMake/: FetchLibraries.cmake
Source/Runtime/: CMakeLists.txt
Source/Runtime/Core/: Core.h
Source/Runtime/D3D12/Core/: Core.h
Source/Runtime/D3D12/Instance/: D3D12Instance.h
Source/Runtime/Graphics/: GraphicsBackend.h
Source/Runtime/Graphics/Adapter/: GraphicsAdapter.cpp  GraphicsAdapter.h  GraphicsAdapterDesc.h
Source/Runtime/Graphics/Buffer/: GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsBufferDesc.h  GraphicsBufferHostUpdateDesc.h  GraphicsBufferUsage.h  VulkanBufferUtils.h
Source/Runtime/Graphics/Command/: CommandList.cpp  CommandList.h  CommandListDesc.h  CommandPool.cpp  CommandPool.h  CommandPoolDesc.h  CommandPoolType.h
Source/Runtime/Graphics/Common/: BufferBufferCopyDesc.h  BufferMemoryBarrierDesc.h  BufferTextureCopyDesc.h  ClearValue.h  CompareOperation.h  DescriptorSetCopyDesc.h  DescriptorSetCopyEntry.h  DescriptorSetUpdateDesc.h  DescriptorSetUpdateEntry.h  HostBufferUpdateDesc.h  IndexBufferType.h  LogicOperation.h  ScissorDesc.h  TextureCopyDesc.h  TextureMemoryBarrierDesc.h  ViewportDesc.h
Source/Runtime/Graphics/Descriptor/: DescriptorMemoryType.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorPoolDesc.h  DescriptorPoolSize.h  DescriptorResourceType.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetDesc.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutDesc.h  DescriptorSetLayoutEntry.h
Source/Runtime/Graphics/Device/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceDesc.h  GraphicsDeviceFeatures.h  GraphicsDeviceObject.cpp  GraphicsDeviceObject.h  GraphicsDeviceObjectType.h
Source/Runtime/Graphics/Fence/: Fence.cpp  Fence.h  FenceDesc.h
Source/Runtime/Graphics/Instance/: GraphicsInstance.cpp  GraphicsInstance.h  GraphicsInstanceDesc.h
Source/Runtime/Graphics/Memory/: GraphicsMemory.cpp  GraphicsMemory.h  GraphicsMemoryAccessFlags.h  GraphicsMemoryDesc.h  GraphicsMemoryHeap.cpp  GraphicsMemoryHeap.h  GraphicsMemoryHeapDesc.h  GraphicsMemoryType.h  VulkanMemoryUtils.h
Source/Runtime/Graphics/Pipeline/: ComputePipelineDesc.h  GraphicsPipelineDesc.h  Pipeline.h  PipelineBindPoint.h  PipelineStageFlags.h
Source/Runtime/Graphics/Pipeline/BlendState/: BlendColorWriteMask.h  BlendFactor.h  BlendOperation.h  BlendStateAttachment.h  BlendStateDesc.h
Source/Runtime/Graphics/Pipeline/DepthStencilState/: DepthStencilStateDesc.h  StencilFaceDesc.h  StencilOperation.h
Source/Runtime/Graphics/Pipeline/InputLayout/: InputBinding.h  (+5 more)
Source/Runtime/Graphics/Queue/: GraphicsQueue.cpp  GraphicsQueue.h  GraphicsQueueDesc.h  GraphicsQueueFamilyType.h  GraphicsQueueType.h
Source/Runtime/Graphics/RenderPass/: RenderPass.h  RenderPassAttachmentDesc.h  RenderPassDesc.h  RenderPassLoadOperation.h  RenderPassStoreOperation.h  RenderPassSubpassDependencyDesc.h  RenderPassSubpassDesc.h
Source/Runtime/Graphics/Sampler/: Sampler.cpp  Sampler.h  SamplerAddressMode.h  SamplerBorderColor.h  SamplerDesc.h  SamplerFiltering.h  SamplerMapMode.h
Source/Runtime/Graphics/Semaphore/: Semaphore.cpp  Semaphore.h  SemaphoreDesc.h
Source/Runtime/Graphics/Shader/: Shader.cpp  Shader.h  ShaderDesc.h  ShaderLanguage.h  ShaderStage.h
Source/Runtime/Graphics/Swapchain/: PresentMode.h  Swapchain.cpp  Swapchain.h  SwapchainDesc.h
Source/Runtime/Graphics/Texture/: Texture.cpp  Texture.h  TextureAspectFlags.h  TextureDesc.h  TextureFormat.h  TextureMemoryLayout.h  TextureSampleCount.h  TextureType.h  TextureUsage.h  TextureUtils.cpp  TextureUtils.h  TextureView.cpp  TextureView.h  TextureViewDesc.h
Source/Runtime/Input/: KeyboardKeys.h  MouseButtons.h  Win32Keys.cpp  Win32Keys.h
Source/Runtime/Monitor/: Monitor.cpp  Monitor.h  MonitorDisplayMode.h
Source/Runtime/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerUtils.h
Source/Runtime/Vulkan/: VulkanUtils.h
Source/Runtime/Vulkan/Adapter/: VulkanAdapter.cpp  VulkanAdapter.h
Source/Runtime/Vulkan/Buffer/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanBufferUtils.h
Source/Runtime/Vulkan/Command/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandPool.cpp  VulkanCommandPool.h
Source/Runtime/Vulkan/Descriptor/: VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDescriptorUtils.cpp  VulkanDescriptorUtils.h
Source/Runtime/Vulkan/Device/: VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceDesc.h  VulkanDeviceFeatures.h
Source/Runtime/Vulkan/Fence/: VulkanFence.cpp  VulkanFence.h
Source/Runtime/Vulkan/Instance/: VulkanInstance.cpp  VulkanInstance.h  VulkanInstanceDesc.h
Source/Runtime/Vulkan/Memory/: VulkanMemory.cpp  VulkanMemory.h
Source/Runtime/Vulkan/Pipeline/: VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineUtils.h
Source/Runtime/Vulkan/Queue/: VulkanQueue.cpp  VulkanQueue.h
Source/Runtime/Vulkan/RenderPass/: VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderPassUtils.h
Source/Runtime/Vulkan/Sampler/: VulkanSampler.cpp  VulkanSampler.h  VulkanSamplerUtils.h
Source/Runtime/Vulkan/Semaphore/: VulkanSemaphore.cpp  VulkanSemaphore.h
Source/Runtime/Vulkan/Shader/: VulkanShader.cpp  VulkanShader.h  VulkanShaderUtils.h
Source/Runtime/Vulkan/Swapchain/: VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSwapchainUtils.h
Source/Runtime/Vulkan/Texture/: VulkanTexture.cpp  VulkanTexture.h  VulkanTextureUtils.h  VulkanTextureView.cpp  VulkanTextureView.h
Source/Runtime/Window/: Window.cpp  Window.h  WindowCreateDesc.h  WindowDesc.h  WindowEventData.h  WindowEventType.h  WindowMode.h
Source/Runtime/Windows/: Win32Monitor.cpp  Win32Monitor.h  Win32Window.cpp  Win32Window.h
Source/TestShop/: CMakeLists.txt  main.cpp
(+6 files in other folders)
